k8s/loyalty-cms-deployment.yml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loyalty-cms
  labels:
    app: loyalty-cms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loyalty-cms
  template:
    metadata:
      labels:
        app: loyalty-cms
    spec:
      containers:
        - name: cms
          image: toanbv1997/loyalty-cms:1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "0.2"
              memory: 300Mi
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            initialDelaySeconds: 120
            timeoutSeconds: 20
            periodSeconds: 600
            failureThreshold: 5
          livenessProbe:
              httpGet:
                port: 8080
                path: /actuator/info
              initialDelaySeconds: 120
              timeoutSeconds: 20
              periodSeconds: 600
              failureThreshold: 5

---
# service
apiVersion: v1
kind: Service
metadata:
  name: loyalty-cms
  labels:
    app: loyalty-cms
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: loyalty-cms
