k8s/loyalty-voucher-deployment.yaml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loyalty-voucher-deployment
  labels:
    app: loyalty-voucher-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loyalty-voucher
  template:
    metadata:
      labels:
        app: loyalty-voucher
    spec:
      containers:
        - name: loyalty-voucher
          image: toanbv1997/loyalty-voucher:1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "0.2"
              memory: 300Mi
          readinessProbe:
            httpGet:
              port: 8082
              path: /voucher/actuator/health
            initialDelaySeconds: 120
            timeoutSeconds: 20
            periodSeconds: 600
            failureThreshold: 5
          livenessProbe:
              httpGet:
                port: 8082
                path: /voucher/actuator/info
              initialDelaySeconds: 120
              timeoutSeconds: 20
              periodSeconds: 600
              failureThreshold: 5
---
# service
apiVersion: v1
kind: Service
metadata:
  name: loyalty-voucher-service
  labels:
    app: loyalty-voucher-service
spec:
  ports:
    - port: 8082
      protocol: TCP
      targetPort: 8082
  selector:
    app: loyalty-voucher
