k8s/postgres-deployment.yaml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresdb
  labels:
    app: postgresdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresdb
  template:
    metadata:
      labels:
        app: postgresdb
    spec:
      containers:
        - name: postgresdb
          image: postgres
          ports:
            - containerPort: 5432
      serviceAccountName: default
---

# service
apiVersion: v1
kind: Service
metadata:
  name: postgresdb
  labels:
    app: postgresdb
spec:
  ports:
    - port: 5433
      protocol: TCP
      targetPort: 5432
  selector:
    app: postgresdb
