k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: loyalty-cluster.info
      http:
        paths:
          - path: /cms
            backend:
              service:
                name: loyalty-cms
                port:
                  number: 80
            pathType: Prefix
          - path: /voucher
            backend:
              service:
                name: loyalty-voucher-service
                port:
                  number: 80
            pathType: Prefix
